--- a/index.html
+++ b/index.html
@@ -7614,7 +7614,7 @@
                   class="t-form t-form_inputs-total_2 js-form-proccess"
                   id="form876692464"
                   name="form876692464"
-                  action="https://forms.tildacdn.com/procces/"
+                  action="https://formspree.io/f/mzzgkgrv"
                   method="POST"
                   role="form"
                   data-formactiontype="2"
