Добавлена рабочая форма Google

--- a/index.html
+++ b/index.html
@@ -7614,7 +7614,7 @@
                   class="t-form t-form_inputs-total_2 js-form-proccess"
                   id="form876692464"
                   name="form876692464"
-                  action="https://formspree.io/f/mzzgkgrv"
+                  action="https://script.google.com/macros/s/AKfycbxGqvIv3Sn9ZiifSkCyJrA8BqMl55gImtKYcslVwvCYgGyeiEAZkrazI3bx7PJG7fI/exec"
                   method="POST"
                   role="form"
                   data-formactiontype="2"
