--- a/index.html
+++ b/index.html
@@ -7611,259 +7611,94 @@
                   }
                 </style>
                 <form
-                  class="t-form t-form_inputs-total_2 js-form-proccess"
-                  id="form876692464"
-                  name="form876692464"
                   action="https://script.google.com/macros/s/AKfycbzzpfvUVr3bQmER1HzrMp_6zP6r4H-adrT1inTKRjiFmoBnqQnsm1gaBgAj0b_Ce8P2/exec"
                   method="POST"
-                  role="form"
+                  style="font-family: Georgia"
                 >
-                  <input
-                    type="hidden"
-                    tabindex="-1"
-                    value="b34e81731e9a97a297d82e908d9fd6fa"
-                    name="formservices[]"
-                    class="js-formaction-services"
-                  /><input
-                    type="hidden"
-                    tabindex="-1"
-                    value="1696918946848"
-                    name="tildaspec-elemid"
-                  />
-                  <div
-                    class="js-successbox t-form__successbox t-text t-text_sm"
-                    style="display: none"
-                  >
-                    Сәтті жіберілді!
-                  </div>
-                  <div class="t-form__inputsbox">
-                    <div
-                      class="t-input-group t-input-group_nm"
-                      data-input-lid="1531306243545"
-                      style="margin-bottom: 20px"
+                  <div style="margin-bottom: 20px">
+                    <label
+                      style="
+                        display: block;
+                        color: black;
+                        padding-bottom: 5px;
+                        font-size: 19px;
+                        font-weight: 400;
+                      "
                     >
-                      <label
-                        for="nm-1531306243545"
-                        class="t-input-title"
-                        data-redactor-toolbar="no"
-                        field="nullli_title__1531306243545"
-                        style="
-                          display: block;
-                          color: rgb(0, 0, 0);
-                          font-family: Georgia;
-                          padding-bottom: 5px;
-                          font-size: 19px;
-                          font-weight: 400;
-                        "
-                        >Аты-жөніңіз (жұбыңызбен келетін болсаңыз, есімдеріңізді
-                        бірге жазуыңызды өтінеміз)</label
-                      >
-                      <div class="t-input-block">
-                        <input
-                          id="nm-1531306243545"
-                          type="text"
-                          name="Name"
-                          class="t-input js-tilda-rule t-input-inline-styles"
-                          data-tilda-rule="name"
-                          placeholder="Есіміңіз"
-                          data-tilda-req="1"
-                          style="
-                            color: rgb(0, 0, 0);
-                            border: 1px solid rgb(0, 0, 0);
-                            background-color: rgb(255, 255, 255);
-                            border-radius: 10px;
-                            font-size: 16px;
-                            font-weight: 400;
-                            height: 40px;
-                          "
-                        />
-                        <div class="t-input-error"></div>
-                      </div>
-                    </div>
-                    <div
-                      class="t-input-group t-input-group_rd"
-                      data-input-lid="1696919136653"
-                      style="margin-bottom: 20px"
-                    >
-                      <div class="t-input-block">
-                        <div class="t-radio__wrapper">
-                          <fieldset>
-                            <label
-                              class="t-radio__control"
-                              style="
-                                font-size: 18px;
-                                font-weight: 400;
-                                color: rgb(0, 0, 0);
-                                font-family: Georgia;
-                              "
-                              ><input
-                                type="radio"
-                                value="Келемін"
-                                class="t-radio js-tilda-rule"
-                                name="Radio"
-                                data-tilda-req="1"
-                              />
-                              <div
-                                class="t-radio__indicator"
-                                style="border-color: rgb(0, 0, 0)"
-                              ></div>
-                              <span>Келемін</span></label
-                            ><label
-                              class="t-radio__control"
-                              style="
-                                font-size: 18px;
-                                font-weight: 400;
-                                color: rgb(0, 0, 0);
-                                font-family: Georgia;
-                              "
-                              ><input
-                                type="radio"
-                                value="Жұбыммен келемін"
-                                class="t-radio js-tilda-rule"
-                                name="Radio"
-                                data-tilda-req="1"
-                              />
-                              <div
-                                class="t-radio__indicator"
-                                style="border-color: rgb(0, 0, 0)"
-                              ></div>
-                              <span>Жұбыммен келемін</span></label
-                            ><label
-                              class="t-radio__control"
-                              style="
-                                font-size: 18px;
-                                font-weight: 400;
-                                color: rgb(0, 0, 0);
-                                font-family: Georgia;
-                              "
-                              ><input
-                                type="radio"
-                                value="Өкінішке орай, қатыса алмаймын"
-                                class="t-radio js-tilda-rule"
-                                name="Radio"
-                                data-tilda-req="1"
-                              />
-                              <div
-                                class="t-radio__indicator"
-                                style="border-color: rgb(0, 0, 0)"
-                              ></div>
-                              <span>Өкінішке орай, қатыса алмаймын</span></label
-                            >
-                          </fieldset>
-                        </div>
-                        <style>
-                          #rec876692464
-                            [data-elem-id="1696918946848"]
-                            .t-radio__indicator:after {
-                            background-color: #000000;
-                          }
-                        </style>
-                        <div class="t-input-error"></div>
-                      </div>
-                    </div>
-                    <div class="t-form__errorbox-middle">
-                      <div
-                        class="js-errorbox-all t-form__errorbox-wrapper"
-                        style="display: none"
-                      >
-                        <div class="t-form__errorbox-text t-text_xs t-text">
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-all"
-                          ></p>
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-req"
-                          ></p>
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-email"
-                          ></p>
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-name"
-                          ></p>
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-phone"
-                          ></p>
-                          <p
-                            class="t-form__errorbox-item js-rule-error js-rule-error-string"
-                          ></p>
-                        </div>
-                        <div class="tn-form__errorbox-close js-errorbox-close">
-                          <div
-                            class="tn-form__errorbox-close-line tn-form__errorbox-close-line-left"
-                          ></div>
-                          <div
-                            class="tn-form__errorbox-close-line tn-form__errorbox-close-line-right"
-                          ></div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="tn-form__submit">
-                      <button
-                        type="submit"
-                        class="t-submit"
-                        style="
-                          padding: 0px 15px;
-                          display: block;
-                          width: 160px;
-                          font-weight: 600;
-                          height: 50px;
-                          box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px;
-                        "
-                      >
-                        Жіберу
-                      </button>
-                    </div>
-                  </div>
-                  <div class="t-form__errorbox-bottom">
-                    <div
-                      class="js-errorbox-all t-form__errorbox-wrapper"
-                      style="display: none"
-                    >
-                      <div class="t-form__errorbox-text t-text_xs t-text">
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-all"
-                        ></p>
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-req"
-                        ></p>
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-email"
-                        ></p>
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-name"
-                        ></p>
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-phone"
-                        ></p>
-                        <p
-                          class="t-form__errorbox-item js-rule-error js-rule-error-string"
-                        ></p>
-                      </div>
-                      <div class="tn-form__errorbox-close js-errorbox-close">
-                        <div
-                          class="tn-form__errorbox-close-line tn-form__errorbox-close-line-left"
-                        ></div>
-                        <div
-                          class="tn-form__errorbox-close-line tn-form__errorbox-close-line-right"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                  <div
-                    style="
-                      position: absolute;
-                      left: -5000px;
-                      bottom: 0px;
-                      display: none;
-                    "
-                  >
+                      Аты-жөніңіз (жұбыңызбен келетін болсаңыз, есімдеріңізді
+                      бірге жазуыңызды өтінеміз)
+                    </label>
                     <input
                       type="text"
-                      name="form-spec-comments"
-                      class="js-form-spec-comments"
-                      tabindex="-1"
+                      name="Name"
+                      placeholder="Есіміңіз"
+                      required
+                      style="
+                        color: black;
+                        border: 1px solid black;
+                        background-color: white;
+                        border-radius: 10px;
+                        font-size: 16px;
+                        font-weight: 400;
+                        height: 40px;
+                        width: 100%;
+                      "
                     />
                   </div>
+
+                  <div style="margin-bottom: 20px">
+                    <fieldset>
+                      <label
+                        style="font-size: 18px; font-weight: 400; color: black"
+                      >
+                        <input
+                          type="radio"
+                          name="Radio"
+                          value="Келемін"
+                          required
+                        />
+                        <span>Келемін</span> </label
+                      ><br />
+                      <label
+                        style="font-size: 18px; font-weight: 400; color: black"
+                      >
+                        <input
+                          type="radio"
+                          name="Radio"
+                          value="Жұбыммен келемін"
+                        />
+                        <span>Жұбыммен келемін</span> </label
+                      ><br />
+                      <label
+                        style="font-size: 18px; font-weight: 400; color: black"
+                      >
+                        <input
+                          type="radio"
+                          name="Radio"
+                          value="Өкінішке орай, қатыса алмаймын"
+                        />
+                        <span>Өкінішке орай, қатыса алмаймын</span>
+                      </label>
+                    </fieldset>
+                  </div>
+
+                  <button
+                    type="submit"
+                    style="
+                      padding: 0 15px;
+                      width: 160px;
+                      font-weight: 600;
+                      height: 50px;
+                      border-radius: 10px;
+                      background-color: black;
+                      color: white;
+                      font-size: 16px;
+                    "
+                  >
+                    Жіберу
+                  </button>
                 </form>
+
                 <style id="t-zero-form-btn-styles-1696918946848-876692464">
                   #rec876692464 [data-elem-id="1696918946848"] .t-submit {
                     color: #ffffff;
