Updated working form

--- a/index.html
+++ b/index.html
@@ -7708,8 +7708,9 @@
                     cursor: pointer;
                     background-color: #000000;
                     transition: 0.3s ease all;
-                  }</style
-                ><style
+                  }
+                  </style>
+                  <style
                   id="t-zero-form-btn-hover-styles-1696918946848-876692464"
                 >
                   #rec876692464 [data-elem-id="1696918946848"] .t-submit:hover {
