Updated working form

--- a/index.html
+++ b/index.html
@@ -7630,7 +7630,7 @@
                     </label>
                     <input
                       type="text"
-                      name="Name"
+                      name="name"
                       placeholder="Есіміңіз"
                       required
                       style="
@@ -7653,7 +7653,7 @@
                       >
                         <input
                           type="radio"
-                          name="Radio"
+                          name="response"
                           value="Келемін"
                           required
                         />
@@ -7664,7 +7664,7 @@
                       >
                         <input
                           type="radio"
-                          name="Radio"
+                          name="response"
                           value="Жұбыммен келемін"
                         />
                         <span>Жұбыммен келемін</span> </label
@@ -7674,7 +7674,7 @@
                       >
                         <input
                           type="radio"
-                          name="Radio"
+                          name="response"
                           value="Өкінішке орай, қатыса алмаймын"
                         />
                         <span>Өкінішке орай, қатыса алмаймын</span>
