Updated working form

--- a/index.html
+++ b/index.html
@@ -7611,7 +7611,7 @@
                   }
                 </style>
                 <form
-                  action="https://script.google.com/macros/s/AKfycbzzpfvUVr3bQmER1HzrMp_6zP6r4H-adrT1inTKRjiFmoBnqQnsm1gaBgAj0b_Ce8P2/exec"
+                  action="https://script.google.com/macros/s/AKfycbyTIXhAyCC3YLjtkIK47g2HQn4hGXjgMKEGsjJL55dnPq-nfNeuwGedvJ5oOXWQJJC5/exec"
                   method="POST"
                   style="font-family: Georgia"
                 >
@@ -7630,7 +7630,7 @@
                     </label>
                     <input
                       type="text"
-                      name="name"
+                      name="Name"
                       placeholder="Есіміңіз"
                       required
                       style="
@@ -7653,7 +7653,7 @@
                       >
                         <input
                           type="radio"
-                          name="response"
+                          name="Radio"
                           value="Келемін"
                           required
                         />
@@ -7664,7 +7664,7 @@
                       >
                         <input
                           type="radio"
-                          name="response"
+                          name="Radio"
                           value="Жұбыммен келемін"
                         />
                         <span>Жұбыммен келемін</span> </label
@@ -7674,7 +7674,7 @@
                       >
                         <input
                           type="radio"
-                          name="response"
+                          name="Radio"
                           value="Өкінішке орай, қатыса алмаймын"
                         />
                         <span>Өкінішке орай, қатыса алмаймын</span>
