Updated working form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--metatextblock-->
-    <title>Аружан Қыз Ұзату</title>
+    <title>Ақнұр Қыз Ұзату</title>
     <meta name="description" content="26.10.2024" />
     <meta
       property="og:url"
@@ -3128,7 +3128,7 @@
                 field="tn_text_1715967659987"
                 style="line-height: 59px"
               >
-                Аружанның
+                Ақнұрдың
               </div>
             </div>
             <div
@@ -3204,7 +3204,7 @@
                 field="tn_text_1727200515886"
                 style="line-height: 36px"
               >
-                бейсенбі
+                сенбі
               </div>
             </div>
             <div
@@ -3287,7 +3287,7 @@
                 field="tn_text_1727200807756"
                 style="line-height: 36px"
               >
-                сәуір
+                қыркүйек
               </div>
             </div>
             <div
@@ -3324,7 +3324,7 @@
                 field="tn_text_1727200853248"
                 style="line-height: 36px"
               >
-                24
+                27
               </div>
             </div>
             <div
@@ -5927,7 +5927,7 @@
                 field="tn_text_1696844675984"
                 style="line-height: 31px"
               >
-                Аэропортная 29а,<br /><br />мейрамханасы
+                Саялы,<br /><br />мейрамханасы
               </div>
             </div>
             <div
@@ -6002,7 +6002,7 @@
                 field="tn_text_1696917235065"
                 style="line-height: 54px"
               >
-                "Sanzhar Grand Ballroom”
+                "Sayaly”
               </div>
             </div>
             <div
@@ -6634,7 +6634,7 @@
                 field="tn_text_1696919736706"
                 style="line-height: 56px"
               >
-                Нұрғали-Гулима
+                Асқар-Фарида
               </div>
             </div>
             <div
