Updated working form

--- a/index.html
+++ b/index.html
@@ -1774,10 +1774,10 @@
                 <div class="tn-atom">
                   <img
                     class="tn-atom__img t-img loaded"
-                    data-original="https://static.tildacdn.pro/tild3735-6539-4164-b039-353435366138/5447589059590481670.jpg"
+
                     alt=""
                     imgfield="tn_img_1697434850426"
-                    src="https://optim.tildacdn.pro/tild3735-6539-4164-b039-353435366138/-/resize/664x/-/format/webp/5447589059590481670.jpg.webp"
+                    src="./Изображение WhatsApp 2025-06-26 в 13.46.17_90b5961c.jpg"
                   />
                 </div>
               </div>
